tests/fixtures/invalid/pow_none_int.py
# Cannot call pow() with None, Int
x = pow(None, 1)
